force-app/main/default/objects/Integration_Log__c/fields/Accepted_JSON_String__c.field-meta.xml
<CustomField>
    <fullName>Accepted_JSON_String__c</fullName>
    <label>Accepted JSON String</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>