force-app/main/default/objects/Integration_Log__c/fields/Attachments_Count__c.field-meta.xml
<CustomField>
    <fullName>Attachments_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Attachments Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>