force-app/main/default/objects/Integration_Log__c/fields/Error_Case_Records__c.field-meta.xml
<CustomField>
    <fullName>Error_Case_Records__c</fullName>
    <label>Error Case Records</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>