force-app/main/default/objects/Integration_Log__c/fields/Error_Records__c.field-meta.xml
<CustomField>
    <fullName>Error_Records__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Error Records</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>