force-app/main/default/objects/Integration_Log__c/fields/Is_Error_Occured__c.field-meta.xml
<CustomField>
    <fullName>Is_Error_Occured__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Error Occured</label>
    <type>Checkbox</type>
</CustomField>