force-app/main/default/objects/Integration_Log__c/fields/Return_Response__c.field-meta.xml
<CustomField>
    <fullName>Return_Response__c</fullName>
    <label>Return Response</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>