force-app/main/default/objects/Integration_Log__c/fields/Success_Records__c.field-meta.xml
<CustomField>
    <fullName>Success_Records__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Success Records</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>