force-app/main/default/objects/Integration_Log__c/fields/Total_Records_Processed__c.field-meta.xml
<CustomField>
    <fullName>Total_Records_Processed__c</fullName>
    <formula>Success_Records__c  +  Error_Records__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Records Processed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>